--- a/package.json
+++ b/package.json
@@ -8,16 +8,29 @@
     "build": "webpack"
   },
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.12.13",
+    "@babel/plugin-proposal-export-default-from": "^7.12.13",
+    "@babel/plugin-transform-runtime": "^7.12.15",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "canvas-sketch": "0.0.27",
     "canvas-sketch-cli": "1.1.7",
     "canvas-sketch-util": "1.4.1",
     "clean-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^5.1.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "webpack": "^5.22.0"
   },
   "keywords": [],
   "devDependencies": {
+    "@babel/core": "^7.12.13",
+    "@babel/preset-env": "^7.12.16",
+    "@babel/preset-react": "^7.12.13",
     "@webpack-cli/serve": "^1.3.0",
+    "babel-loader": "^8.2.2",
     "webpack-dev-server": "^3.11.2"
   }
 }
