--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "webpack": "^5.22.0"
+    "webpack": "^5.22.0",
+    "webpack-cli": "^4.5.0"
   },
   "keywords": [],
   "devDependencies": {
